--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -59,4 +59,6 @@
     volumes:
       - "/etc/apache2:/etc/apache2/"
       - "/var/www:/var/www" 
-
+    detach: true
+    interactive: true
+    tty: true   
