--- a/roles/run_container/tasks/main.yaml
+++ b/roles/run_container/tasks/main.yaml
@@ -1,6 +1,6 @@
-- name: Include Ubuntu specific defaults
-  include_vars: defaults/apache2.yaml
-  when: web_service_name == "apache2"
+# - name: Include Ubuntu specific defaults
+#   include_vars: defaults/apache2.yaml
+#   when: web_service_name == "apache2"
 
 - name: Include tasks for apache2 webservice
   include_tasks: apache2.yaml
