--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -34,7 +34,7 @@
 - name: Copy apache2 config files and website content to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
-  loop: "{{ (apache2_config_path if apache2_config_path is list else [apache2_config_path]) + (apache2_content_path if apache2_content_path is list else [apache2_content_path]) }}"
+  loop: "{{ (apache2_config_path if apache2_config_path is iterable else [apache2_config_path]) + (apache2_content_path if apache2_content_path is iterable else [apache2_content_path]) }}"
 
 - name: Enable apache2 service on container
   containers.podman.podman_container_exec:
