--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -40,9 +40,7 @@
 - name: Copy apache2 config files and website content to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
-  loop:
-    - "{{ apache2_config_path_list }}"
-    - "{{ apache2_content_path_list }}"
+  loop: "{{ apache2_config_path_list + apache2_content_path_list }}"
 
 - name: Enable apache2 service on container
   containers.podman.podman_container_exec:
