--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -1,46 +1,46 @@
-# - name: Create ports mapping list
-#   set_fact:
-#     webservice_ports_mappings: "{{ webservice_ports | map('regex_replace', '(\\d+)', '\\1:\\1') | list }}"
-
-# - name: debug
-#   debug:
-#     msg: "{{ webservice_ports_mappings }}"
-
-
-- name: Pull {{ ubuntu_container_image }} image
-  containers.podman.podman_image:
-    name: "{{ ubuntu_container_image }}"
-
-- name: Create a container from the "{{ ubuntu_container_image }}" image
-  containers.podman.podman_container:
-    name: "{{ tmp_container_name }}"
-    image: "{{ ubuntu_container_image }}"
-    state: started
-    detach: true
-    interactive: true
-    tty: true   
-
-- name: Install updates and apache2 package inside the container
-  containers.podman.podman_container_exec:
-    name: "{{ tmp_container_name }}"
-    argv: 
-      - /bin/bash
-    command: "{{ item }}"
-  loop:
-    - apt-get update -y
-    - apt-get upgrade -y
-    - apt-get install -y apache2
-
-- name: Set directories list
+- name: Create ports mapping list
   set_fact:
-    apache2_config_path_list: "{{ (apache2_config_path if apache2_config_path is iterable else [apache2_config_path]) }}"
-    apache2_content_path_list: "{{ (apache2_content_path if apache2_content_path is iterable else [apache2_content_path]) }}"
+    webservice_ports_mappings: "{{ webservice_ports | map('regex_replace', '(\\d+)', '\\1:\\1') | list }}"
+
+- name: debug
+  debug:
+    msg: "{{ webservice_ports_mappings }}"
 
 
-- name: Copy apache2 config files and website content to container
+# - name: Pull {{ ubuntu_container_image }} image
+#   containers.podman.podman_image:
+#     name: "{{ ubuntu_container_image }}"
+
+# - name: Create a container from the "{{ ubuntu_container_image }}" image
+#   containers.podman.podman_container:
+#     name: "{{ tmp_container_name }}"
+#     image: "{{ ubuntu_container_image }}"
+#     state: started
+#     detach: true
+#     interactive: true
+#     tty: true   
+
+# - name: Install updates and apache2 package inside the container
+#   containers.podman.podman_container_exec:
+#     name: "{{ tmp_container_name }}"
+#     argv: 
+#       - /bin/bash
+#     command: "{{ item }}"
+#   loop:
+#     - apt-get update -y
+#     - apt-get upgrade -y
+#     - apt-get install -y apache2
+
+
+- name: Copy apache2 config to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
-  loop: "{{ apache2_config_path_list + apache2_content_path_list }}"
+  loop: "{{ (apache2_config_path if apache2_config_path is iterable else [apache2_config_path]) }}"
+
+- name: Copy apache2 config to container
+  command:
+    cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
+  loop: "{{ (apache2_content_path if apache2_content_path is iterable else [apache2_content_path]) }}"
 
 - name: Enable apache2 service on container
   containers.podman.podman_container_exec:
