--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -38,7 +38,7 @@
 - name: Copy apache2 config to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
-  loop: apache2_config_path
+  loop: "{{ apache2_config_path }}"
   when: apache2_config_path is iterable
 
 - name: Copy apache2 config to container
@@ -49,7 +49,7 @@
 - name: Copy apache2 content to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
-  loop: apache2_content_path
+  loop: "{{ apache2_content_path }}"
   when: apache2_config_path is iterable
 
 - name: Copy apache2 content to container
