--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -39,23 +39,23 @@
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
   loop: "{{ apache2_config_path }}"
-  when: apache2_config_path is iterable
+  when: apache2_config_path is iterable and apache2_config_path is not string
 
 - name: Copy apache2 config to container
   command:
     cmd: 'podman cp {{ apache2_config_path }} {{ tmp_container_name }}:{{ apache2_config_path }}'
-  when: apache2_config_path not iterable
+  when: apache2_config_path is string
 
 - name: Copy apache2 content to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
   loop: "{{ apache2_content_path }}"
-  when: apache2_config_path is iterable
+  when: apache2_content_path is iterable and apache2_content_path is not string
 
 - name: Copy apache2 content to container
   command:
     cmd: 'podman cp {{ apache2_content_path }} {{ tmp_container_name }}:{{ apache2_content_path }}'
-  when: apache2_content_path not iterable
+  when: apache2_content_path is string
 
 - name: Enable apache2 service on container
   containers.podman.podman_container_exec:
