--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -38,6 +38,11 @@
 - name: Copy apache2 config to container
   command:
     cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
+  loop: "{{ apache2_config_path | list }}"
+
+- name: Copy apache2 config to container
+  command:
+    cmd: 'podman cp {{ item }} {{ tmp_container_name }}:{{ item }}'
   loop: "{{ apache2_config_path }}"
   when: apache2_config_path is iterable and apache2_config_path is not string
 
