--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -7,29 +7,30 @@
     msg: "{{ webservice_ports_mappings }}"
 
 
-# - name: Pull {{ ubuntu_container_image }} image
-#   containers.podman.podman_image:
-#     name: "{{ ubuntu_container_image }}"
+- name: Pull {{ ubuntu_container_image }} image
+  containers.podman.podman_image:
+    name: "{{ ubuntu_container_image }}"
 
-# - name: Create a container from the "{{ ubuntu_container_image }}" image
-#   containers.podman.podman_container:
-#     name: "{{ tmp_container_name }}"
-#     image: "{{ ubuntu_container_image }}"
-#     state: started
-#     detach: true
-#     interactive: true
-#     tty: true   
+- name: Create a container from the "{{ ubuntu_container_image }}" image
+  containers.podman.podman_container:
+    name: "{{ tmp_container_name }}"
+    image: "{{ ubuntu_container_image }}"
+    state: started
+    detach: true
+    interactive: true
+    tty: true   
 
-# - name: Install updates and apache2 package inside the container
-#   containers.podman.podman_container_exec:
-#     name: "{{ tmp_container_name }}"
-#     argv: 
-#       - /bin/bash
-#     command: "{{ item }}"
-#   loop:
-#     - apt-get update -y
-#     - apt-get upgrade -y
-#     - apt-get install -y apache2
+- name: Install updates and apache2 package inside the container
+  containers.podman.podman_container_exec:
+    name: "{{ tmp_container_name }}"
+    argv: 
+      - /bin/bash
+    command: "{{ item }}"
+  loop:
+    - apt-get update -y
+    - apt-get upgrade -y
+    - apt-get install -y apache2
+    - apt-get install -y systemctl
 
 - name: Copy apache2 config to container
   command:
@@ -45,7 +46,7 @@
     name: "{{ tmp_container_name }}"
     argv: 
       - /bin/bash
-    command: 'service apache2 start'
+    command: 'systemctl enable --now apache2'
 
 - name: Commit the modified container to a new image
   command:
