--- a/roles/run_container/defaults/main.yaml
+++ b/roles/run_container/defaults/main.yaml
@@ -1,5 +1,6 @@
 rootless_user: "{{ notdefined | mandatory(msg='This variable is required.') }}"
 webservice_ports: "{{ notdefined | mandatory(msg='This variable is required.') }}"
+apache2_enabled_modules: "{{ notdefined | mandatory(msg='This variable is required.') }}"
 tmp_container_name: tmp_apache2_ubuntu
 apache2_container_name: apache2_ubuntu
 ubuntu_container_image: docker.io/library/ubuntu:22.04
