--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -9,9 +9,9 @@
 
   roles:
     - name: identify_web_service
-    # - name: prepare_container_environment
-    #   vars:
-    #     apache2_content_dirs: "{{ document_roots }}"
+    - name: prepare_container_environment
+      vars:
+        apache2_content_dirs: "{{ document_roots }}"
     - name: identify_and_backup_content
     - name: identify_web_ports
     - name: identify_enabled_modules
