--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -19,3 +19,5 @@
       vars:
         apache2_config_path: "{{ apache2_root_path }}"
         apache2_content_path: "{{ apache2_document_roots }}"
+        apache2_sslcertificatekeyfile_path: "{{ apache2_sslcertificatefile_path }}"
+        apache2_sslcertificatefile_path: "{{ apache2_sslcertificatefile_path }}"
