--- a/roles/run_container/defaults/main.yaml
+++ b/roles/run_container/defaults/main.yaml
@@ -7,3 +7,5 @@ ubuntu_container_image: docker.io/library/ubuntu:22.04
 custom_apache2_container_image: docker.io/library/apache2_ubuntu:22.04
 apache2_config_path: "{{ notdefined | mandatory(msg='This variable is required.') }}"
 apache2_content_path: "{{ notdefined | mandatory(msg='This variable is required.') }}"
+apache2_sslcertificatekeyfile_path: "{{ apache2_sslcertificatefile_path }}"
+apache2_sslcertificatefile_path: "{{ apache2_sslcertificatefile_path }}"
