--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -61,6 +61,9 @@
 - name: Extract and filter unique SSLCertificateFile paths
   set_fact:
     apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', 'SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list | default('') }}"
+- name: Display unique SSLCertificateFile paths
+  debug:
+    msg: "{{ apache2_sslcrtificatefile_otput }}"
 
 - name: Display unique SSLCertificateFile paths
   debug:
