--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -17,59 +17,50 @@
     msg: "Apache2 configuration directory is: {{ apache2_config_file_path }}"
 ######################
 
-- name: Find all files in {{ apache2_root_path }}/sites-available/ directory
-  find:
-    paths: "{{ apache2_root_path }}/sites-available"
-    recurse: yes
-    file_type: file
-  register: apache2_sitesavailable_files
+# - name: Find all files in {{ apache2_root_path }}/sites-available/ directory
+#   find:
+#     paths: "{{ apache2_root_path }}/sites-available"
+#     recurse: yes
+#     file_type: file
+#   register: apache2_sitesavailable_files
 
-- name: Find all files in {{ apache2_root_path }}/sites-enabled/ directory
-  find:
-    paths: "{{ apache2_root_path }}/sites-enabled"
-    recurse: yes
-    file_type: file
-  register: apache2_sitesenabled_files
+# - name: Find all files in {{ apache2_root_path }}/sites-enabled/ directory
+#   find:
+#     paths: "{{ apache2_root_path }}/sites-enabled"
+#     recurse: yes
+#     file_type: file
+#   register: apache2_sitesenabled_files
 
-- name: Combine files from both directories
-  set_fact:
-    apache2_sites_files: "{{ apache2_sitesenabled_files.files + apache2_sitesavailable_files.files }}"
+# - name: Combine files from both directories
+#   set_fact:
+#     apache2_sites_files: "{{ apache2_sitesenabled_files.files + apache2_sitesavailable_files.files }}"
 
-- name: Extract the paths of all files
-  set_fact:
-    apache2_sites_files_paths: "{{ apache2_sites_files | map(attribute='path') | list }}"
+# - name: Extract the paths of all files
+#   set_fact:
+#     apache2_sites_files_paths: "{{ apache2_sites_files | map(attribute='path') | list }}"
 
-- name: Display all file paths
-  debug:
-    var: apache2_sites_files_paths
-
-
-
-
-
-
-
-
-
-
+# - name: Display all file paths
+#   debug:
+#     var: apache2_sites_files_paths
 
 ###
 
-# - name: Search for DocumentRoot directive in Apache2 config files
-#   command: grep -r "DocumentRoot" {{ apache2_root_path }}/sites-available/
-#   register: apache2_documentroot_otput
-#   failed_when: false
+- name: Search for DocumentRoot directive in Apache2 config files
+  command: grep -r "DocumentRoot" {{ apache2_root_path }}/sites-available/
+  register: apache2_documentroot_otput
+  failed_when: false
 
-# - name: Extract and filter unique DocumentRoot paths
-#   set_fact:
-#     apache2_document_roots: "{{ apache2_documentroot_otput.stdout_lines | select('search', 'DocumentRoot') | map('regex_replace', '.*DocumentRoot\\s+(.*)', '\\1') | unique | list }}"
+- name: Extract and filter unique DocumentRoot paths
+  set_fact:
+    apache2_document_roots: "{{ apache2_documentroot_otput.stdout_lines | select('search', 'DocumentRoot') | map('regex_replace', '.*DocumentRoot\\s+(.*)', '\\1') | unique | list }}"
 
-# - name: Display unique DocumentRoot paths
-#   debug:
-#     msg: "{{ apache2_document_roots }}"
+- name: Display unique DocumentRoot paths
+  debug:
+    msg: "{{ apache2_document_roots }}"
 
 
 ###############
+
 # - name: Search for SSLCertificateKeyFile and SSLCertificateFile directives in Apache2 config files (sites-available and sites-enabled)
 #   command: grep -r -E "SSLCertificateFile|SSLCertificateKeyFile" {{ apache2_root_path }}/sites-available/ {{ apache2_root_path }}/sites-enabled/
 #   register: apache2_ssl_certificate_paths_output
@@ -101,7 +92,7 @@
 
 - name: Extract and filter unique SSLCertificateFile paths
   set_fact:
-    apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', 'SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list | default('') }}"
+    apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', '^(?!\\s*#).*SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list | default('') }}"
 - name: Display unique SSLCertificateFile paths
   debug:
     msg: "{{ apache2_sslcrtificatefile_otput }}"
@@ -111,18 +102,18 @@
     msg: "{{ apache2_sslcertificatefile_path }}"
 
 
-# - name: Search for SSLCertificateKeyFile directive in Apache2 config files
-#   command: grep -r "SSLCertificateKeyFile" {{ apache2_root_path }}/sites-available/
-#   register: apache2_sslcertificatekeyfile_otput
-#   failed_when: false
+- name: Search for SSLCertificateKeyFile directive in Apache2 config files
+  command: grep -r "SSLCertificateKeyFile" {{ apache2_root_path }}/sites-available/
+  register: apache2_sslcertificatekeyfile_otput
+  failed_when: false
 
-# - name: Extract and filter unique SSLCertificateKeyFile paths
-#   set_fact:
-#     apache2_sslcertificatekeyfile_path: "{{ apache2_sslcertificatekeyfile_otput.stdout_lines | select('search', 'SSLCertificateKeyFile') | map('regex_replace', '.*SSLCertificateKeyFile\\s+(.*)', '\\1') | unique | list | default('') }}"
+- name: Extract and filter unique SSLCertificateKeyFile paths
+  set_fact:
+    apache2_sslcertificatekeyfile_path:"{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', '^(?!\\s*#).*SSLCertificateKeyFile') | map('regex_replace', '.*SSLCertificateKeyFile\\s+(.*)', '\\1') | unique | list | default('') }}"
 
-# - name: Display unique SSLCertificateKeyFile paths
-#   debug:
-#     msg: "{{ apache2_sslcertificatekeyfile_path }}"
+- name: Display unique SSLCertificateKeyFile paths
+  debug:
+    msg: "{{ apache2_sslcertificatekeyfile_path }}"
 
 - name: Create directory for apache2 backup in {{ rootless_user }} home directory
   file:
